# setup-util

./: .envrc  .gitignore  CLAUDE.md  README.md  ROADMAP.md  initial-research-report.md
setup-cli/: README.md  pyproject.toml
setup-cli/setup_cli/: cli.py  merger.py  planner.py  utils.py
setup-cli/templates/alembic/backend/: pyproject.patch.toml.jinja
setup-cli/templates/alembic/backend/alembic/: env.py.jinja
setup-cli/templates/backend-fastapi/backend/: pyproject.toml.jinja
setup-cli/templates/base/: README.md.jinja  copier.yml
setup-cli/templates/db-postgres/: copier.yml  docker-compose.patch.yml.jinja
setup-cli/templates/db-postgres/backend/: .env.example.jinja  pyproject.patch.toml.jinja
setup-cli/templates/db-postgres/backend/app/core/: config.py.jinja
setup-cli/templates/db-sqlalchemy/backend/: pyproject.patch.toml.jinja
setup-cli/templates/db-sqlalchemy/backend/app/db/: session.py.jinja
setup-cli/templates/db-sqlalchemy/backend/app/models/: __init__.py.jinja
setup-cli/templates/docker/: .dockerignore.jinja  copier.yml
testing/: conftest.py  test_cli.py  test_integration.py  test_merger.py  test_planner.py
