[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "setup-cli"
version = "0.1.0"
description = "Composable project scaffolder using Copier"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "copier>=9.0",
  "rich>=13.0",
  "tomli-w>=1.0",
  "tomli>=2.0; python_version < '3.11'",
  "ruamel.yaml>=0.18",
]

[project.scripts]
setup = "setup_cli.cli:app"

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["../testing"]
addopts = "-v"

[tool.setuptools.packages.find]
include = ["setup_cli*"]
exclude = ["templates*"]
